--- a/mangement_advertiser/templates/mangement_advertiser/add_ad.html
+++ b/mangement_advertiser/templates/mangement_advertiser/add_ad.html
@@ -36,17 +36,17 @@
     
     <div class="form-field">
         <label for="{{ form.Title.id_for_label }}">Title:</label>
-        {{ form.Title }}
+        {{ form.title }}
     </div>
     
     <div class="form-field">
         <label for="{{ form.imgUrl.id_for_label }}">Image URL:</label>
-        {{ form.imgUrl }}
+        {{ form.img_url }}
     </div>
     
     <div class="form-field">
         <label for="{{ form.Link.id_for_label }}">Link:</label>
-        {{ form.Link }}
+        {{ form.link }}
     </div>
     
     <div class="form-field">
